app/styles/main.scss
/* ... */
#about-us-section {
  @include white-wood-bg(left, top);
  border-bottom: 5px solid $dark-brown;

  .about-us-outer {
    width: 320px;
    margin: 0 auto 10px;
    padding: 0 20px;

    .about-us-inner {
      text-align: center;
      vertical-align: middle;

      h2 {
        padding: 20px 0;
        @include font-size($home-h2);
      }
      p {
        font-family: 'Bodini MT';
        @include font-size(13);
        font-weight: bold;
        text-align: left;
        padding-bottom: 20px;
      }
    }
  }
}

/*******************************
  Services Page Template
********************************/
.services-page-wrapper {
  // background: url(/images/wood.png) repeat-y top left;
  // background-size: 100% auto;
  // background-attachment: fixed;
  // padding-top: $nav-bar-height;
  text-transform: uppercase;

  .header-cont {
    @include white-wood-bg (left, top);
    padding: 40px 0;
    margin-bottom: 15px;

    h2.first-header-line {
      @include font-size(26);
    }
    h2.second-header-line {
      color: transparent;
      text-indent: -5000px;
      background: url(/images/services/services-header.png) no-repeat center;
      background-size: 20% auto;
      height: 110px;
    }
    ul.services-list {
      margin: 20px auto 0;
      overflow: hidden;
      width: 60%;

      li.service-item {
        float: left;
        width: 25%;
        padding: 0 5px;

        a {
          width: 100%;
          height: 100%;
          display: block;

          img {
            width: 85px;
          }
          h3 {
          }
        }
        &:hover img.svg {
          fill: $dark-brown;
        }
        &:hover h3 {
          color: $dark-brown;
        }
      }
    }
  }
  section.service-cont {
    margin: 30px 0 0;
    padding-bottom: 30px;

    .service-header {
      @include white-wood-bg (left, top);
      margin-bottom: 60px;
      height: 100px;
      .table {
        width: 25%;
        margin: 0 auto;

        .table-cell {
          img {
            width: 35px;
          }
          h3 {
            @include font-size(20);
            margin-top: 5px;
          }
        }
      }
    }
    ul {
      @include box-shadow (0px 0px 55px 18px #000);

      li {
        display: block;
        float: left;
        width: 33.33%;

        img {
          display: block;
        }
      }
    }
  }
  .end-image-section {
    height: 600px;
    width: 100%;
    background-attachment: fixed;
    background-size: cover;
    background-position: center center;
  }
}

#request-a-quote-section {
  @include white-wood-bg(left, bottom);
  padding: 0 0 20px 0;
  min-height: 275px;
  font-weight: 800;

  .outer-wrapper {
      width: 40%;
      margin: 0 auto;


    .inner-wrapper {
      text-align: center;
      vertical-align: middle;

      h2 {
        padding: 20px 0;
        @include font-size($home-h2);
      }
      form{

        input,
        textarea {
          background-clip: content-box;
          // TODO: get licensed font from Chris
          font-family: 'Blacksword';
          @include font-size(20);
          border: 2px solid $dark-brown;
          margin: 0 0 10px 0;
          height: 35px;
          padding-left: 5px;
          @include white-wood-bg(top, left);
          // For fun with white-wood-bg
            // TODO: add ie support with
            // https://css-tricks.com/snippets/css/css-box-shadow/
          background-attachment: fixed;
          @include box-shadow(inset 0 0 12px #000000);
        }
        input[name="name"] {
          float: left;
          width: 48.5%;
        }
        input[name="email-address"] {
          float: right;
          width: 48.5%;
        }
        input[name="phone-number"],
        textarea {
          width: 100%;
        }
        textarea {
          height: 135px;
          max-height: 500px;
          resize: vertical;
        }
        input[type="submit"] {
          background: none;
          @include box-shadow(none);
          float: right;
          font-family: 'BigMummy';
          @include font-size(25);
          width: 120px;
          height: 35px;
          padding: 0;
          border: none;
          margin: 0;
          background-color: #000;
          color: $white;
          text-transform: uppercase;
          cursor: pointer;
          @include transition(all 0.3s);

          &:hover {
            background-color: $dark-brown;
            @include transition(all 0.3s);
          }
        }
      }
    }
  }
}
/* ... */

